Fixed spacing of first .row

--- a/app/assets/stylesheets/wines.scss
+++ b/app/assets/stylesheets/wines.scss
@@ -8,6 +8,10 @@
 
 /* SHOW WINE PAGE */
 
+.bottom_buffer {
+  margin-bottom: 20px;
+}
+
 .showing_label {
   font-style: italic;
 }
